@@ -14,8 +14,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-
 /**
  * Servicio para la gestión de productos del inventario.
  * 
@@ -98,7 +96,7 @@ public class ProductoService {
         return productoRepository.findAll()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -187,7 +185,7 @@ public class ProductoService {
         return productoRepository.findProductosConStockBajo(nivelStock)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -211,4 +209,5 @@ public class ProductoService {
         );
     }
 }
+
 
