@@ -10,8 +10,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 /**
  * Servicio para la gestión de proveedores.
  * 
@@ -80,7 +78,7 @@ public class ProveedorService {
         return proveedorRepository.findAll()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -142,4 +140,5 @@ public class ProveedorService {
                 .build();
     }
 }
+
 
